<resources>
    <string name="app_name">Cottage Alarm</string>

    <!-- Dialog EnterPhoneAlarm -->


    <string name="title_phone_alarm">Введите номер телефона устройства в формате +7…</string>

    <!-- Dialog RelayOff -->


    <string name="title">Выключить реле</string>

    <string name="message">Подтвердите выключение реле</string>

    <!-- Item Menu -->


    <string name="item_phone_alarm">Номер телефона устройства</string>

    <string name="item_phone_user">Номера телефонов пользователя</string>

    <string name="item_set_date_alarm">Установить дату/время устройства</string>

    <string name="item_set_limit_temperature">Установить границы термометра</string>

    <string name="pref_size">Размер шрифта</string>

    <!--Надо разобрать -->


    <string name="stateAlarm">Состояние сигнализации</string>

    <string name="managementRelay">Управление реле</string>

    <string name="btnReloadSettings">Обновить данные</string>

    <string name="textStateOnDate">Состояние сигнализации на дату:</string>

    <string name="valueStateOnDate">01.01.2016</string>

    <string name="textTemperature">Температура</string>

    <string name="valueTemperature">C</string>

    <string name="textEnergy">Питание</string>

    <string name="valueEnergy">OK</string>

    <string name="textBattery">Состояние батареи</string>

    <string name="valueBattery">B</string>

    <string name="textRelay4">Реле 4</string>

    <string name="textRelay6">Реле 6</string>

    <string name="textRelay5">Реле 5</string>

    <string name="valueRelay4">Вкл</string>

    <string name="valueRelay6">Выкл</string>

    <string name="valueRelay5">Выкл</string>

    <string name="text_phone_alarm">Номер телефона</string>

    <string name="value_phone_alarm"></string>

    <string name="title_set_date_time">Установить время и дату устройства</string>

    <string name="title_setting_user_phones_list">Выбирете строку для ввода номера телефона</string>

    <string name="textInputPhone">Номер телефона</string>

    <string name="text_notification_type">Выберите тип оповещения</string>

    <string name="text_btn_apply">Применить</string>

    <string name="textGroupName">Название группы</string>

    <string name="textChildName">Выбранный элемент</string>

    <string name="buttonOk">OK</string>

    <string name="textSetRelay">Установки РЕЛЕ</string>

    <string name="textControlMode">Режим управления РЕЛЕ:</string>

    <string name="textTimeStart">Время запуска</string>

    <string name="textTimeEnd">Время выключения</string>

    <string name="textModeControl">Выберете режим управления</string>

    <string name="textDescription">Реле можно включить на заданное время по команде, посланной в СМС сообщении,
        автоматически по любому выбранному событию (активный вход зоны, звонок с выбранного номера телефона), или по
        команде из голосового меню управления. Если время включения 0 мин – 0 сек, то реле будет включено постоянно, без
        отсчета времени включения.
    </string>

    <string name="textMinOn">Время включения (минуты), 0 – 59 сек</string>

    <string name="textSecOn">Время выключения (минуты), 0 – 59 сек</string>

    <string name="textTitle">Введите время включения РЕЛЕ.</string>

    <string name="textModelControl">Режим управления</string>
</resources>
