<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical" >

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/textStateOnDate"
			android:id="@+id/textStateOnDate"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="24dp"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/valueStateOnDate"
			android:id="@+id/valueStateOnDate"
			android:layout_below="@+id/textStateOnDate"
			android:layout_centerHorizontal="true"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/textTemperature"
			android:id="@+id/textTemperature"
			android:layout_marginTop="24dp"
			android:layout_below="@+id/valueStateOnDate"
			android:layout_alignLeft="@+id/textStateOnDate" android:layout_alignStart="@+id/textStateOnDate"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/valueTemperature"
			android:id="@+id/valueTemperature"
			android:layout_alignTop="@+id/textTemperature"
			android:layout_centerHorizontal="true"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/textEnergy"
			android:id="@+id/textEnergy"
			android:layout_below="@+id/textTemperature" android:layout_alignLeft="@+id/textTemperature"
			android:layout_alignStart="@+id/textTemperature" android:layout_marginTop="24dp"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/valueEnergy"
			android:id="@+id/valueEnergy"
			android:layout_alignTop="@+id/textEnergy"
			android:layout_alignLeft="@+id/valueTemperature"
			android:layout_alignStart="@+id/valueTemperature"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/textBattery"
			android:id="@+id/textBattery"
			android:layout_marginTop="24dp" android:layout_below="@+id/textEnergy"
			android:layout_alignLeft="@+id/textEnergy" android:layout_alignStart="@+id/textEnergy"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/valueBattery"
			android:id="@+id/valueBattery"
			android:layout_alignTop="@+id/textBattery" android:layout_alignLeft="@+id/relay6Btn"
			android:layout_alignStart="@+id/relay6Btn"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/textRelay4"
			android:id="@+id/textRelay4"
			android:layout_marginTop="44dp"
			android:layout_below="@+id/textBattery" android:layout_alignLeft="@+id/relay4Btn"
			android:layout_alignStart="@+id/relay4Btn"/>
	<!--android:layout_centerVertical="true" -->

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/textRelay5"
			android:id="@+id/textRelay5"
			android:layout_alignTop="@+id/textRelay4"
			android:layout_centerHorizontal="true"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/textRelay6"
			android:id="@+id/textRelay6"
			android:layout_above="@+id/relay4Btn" android:layout_alignRight="@+id/textStateOnDate"
			android:layout_alignEnd="@+id/textStateOnDate"/>
	<ToggleButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Button Relay4"
			android:id="@+id/relay4Btn"
			android:layout_below="@+id/textRelay4" android:layout_alignLeft="@+id/textEnergy"
			android:layout_alignStart="@+id/textEnergy" android:layout_marginTop="26dp" android:checked="false"/>
	<ToggleButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Button Relay5"
			android:id="@+id/relay5Btn"
			android:layout_alignTop="@+id/relay4Btn" android:layout_centerHorizontal="true" android:checked="false"/>
	<ToggleButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Button Relay6"
			android:id="@+id/relay6Btn"
			android:layout_alignTop="@+id/relay5Btn" android:layout_alignRight="@+id/textRelay6"
			android:layout_alignEnd="@+id/textRelay6" android:checked="false"/>
	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Послать Смс Реле"
			android:id="@+id/smsRelayBtn" android:layout_below="@+id/relay4Btn" android:layout_centerHorizontal="true"
			android:layout_marginTop="25dp"/>

</RelativeLayout>