<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentStart="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:id="@+id/textInputPhone" android:text="@string/textInputPhone" android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:id="@+id/valueInputPhone" android:gravity="left" android:layout_alignParentEnd="true" android:layout_alignParentRight="true" android:ems="10" android:inputType="phone"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/text_notification_type" android:text="@string/text_notification_type" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_centerHorizontal="true" android:layout_below="@+id/valueInputPhone" android:layout_marginTop="15dp"/>

    <ExpandableListView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/expListViewUserPhone" android:layout_centerHorizontal="true" android:layout_below="@+id/text_notification_type" android:layout_above="@+id/btn_set_user_phone"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btn_set_user_phone" android:text="@string/text_btn_apply" android:layout_centerHorizontal="true" android:layout_alignParentBottom="true" android:onClick="onClick"/>
</RelativeLayout>