<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:weightSum="1">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textSetRelay"
            android:id="@+id/textSetRelay"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_apply"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textModelControl"
            android:id="@+id/textModeControl"
            android:layout_below="@+id/textSetRelay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"/>
    <fragment android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:name="com.example.cottagealarmandroid.app.activity.fragments.SetRelayTimePeriod"
              android:id="@+id/fragment"
              android:layout_below="@+id/textModeControl"
              android:layout_alignLeft="@+id/textModeControl"
              android:layout_alignStart="@+id/textModeControl"
              android:layout_marginTop="40dp"
              android:layout_above="@+id/button"
              android:layout_alignRight="@+id/textModeControl"
              android:layout_alignEnd="@+id/textModeControl"/>
</RelativeLayout>