<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleRelayTimePeriod"
            android:id="@+id/titleRelayTimePeriod"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textDescription"
            android:id="@+id/textDescription"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/titleRelayTimePeriod"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textMinOn"
            android:id="@+id/textMinOn"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textDescription"
            android:layout_marginTop="40dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/valueMinOn"
            android:layout_below="@+id/textMinOn"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textSecOn"
            android:id="@+id/textSecOn"
            android:layout_marginTop="40dp" android:layout_below="@+id/valueMinOn" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/valueSecOn"
            android:layout_below="@+id/textSecOn"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"/>
</RelativeLayout>